src/script/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Script: peg$parseScript,
  };
  let peg$startRuleFunction = peg$parseScript;

  const peg$c0 = "\r\n";
  const peg$c1 = "//";
  const peg$c2 = "\"";
  const peg$c3 = "\\";
  const peg$c4 = "n";
  const peg$c5 = "t";
  const peg$c6 = "-";
  const peg$c7 = ".";
  const peg$c8 = "ms";
  const peg$c9 = "s";
  const peg$c10 = "true";
  const peg$c11 = "false";
  const peg$c12 = "$";
  const peg$c13 = "?";
  const peg$c14 = "or";
  const peg$c15 = "and";
  const peg$c16 = ">=";
  const peg$c17 = "<=";
  const peg$c18 = "!=";
  const peg$c19 = "==";
  const peg$c20 = "(";
  const peg$c21 = ")";
  const peg$c22 = "author";
  const peg$c23 = "version";
  const peg$c24 = "title";
  const peg$c25 = "@";
  const peg$c26 = "@label";
  const peg$c27 = "@if";
  const peg$c28 = "@elseif";
  const peg$c29 = "@say";
  const peg$c30 = "voice=";
  const peg$c31 = "speed=";
  const peg$c32 = "adv";
  const peg$c33 = "nvl";
  const peg$c34 = "@choice";
  const peg$c35 = "@endchoice";
  const peg$c36 = "mode=";
  const peg$c37 = "->";
  const peg$c38 = ":";
  const peg$c39 = "if";
  const peg$c40 = "set";
  const peg$c41 = "add";
  const peg$c42 = "sub";
  const peg$c43 = "mul";
  const peg$c44 = "div";
  const peg$c45 = "mod";
  const peg$c46 = "random";
  const peg$c47 = "=";

  const peg$r0 = /^[ \t]/;
  const peg$r1 = /^[\n\r]/;
  const peg$r2 = /^[^\r\n]/;
  const peg$r3 = /^[a-zA-Z_]/;
  const peg$r4 = /^[a-zA-Z0-9_\-]/;
  const peg$r5 = /^[^"\\\n\r]/;
  const peg$r6 = /^[0-9]/;
  const peg$r7 = /^[<>]/;
  const peg$r8 = /^[+\-]/;
  const peg$r9 = /^[%*\/]/;
  const peg$r10 = /^[!\-]/;

  const peg$e0 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e1 = peg$otherExpectation("mandatory whitespace");
  const peg$e2 = peg$otherExpectation("line end");
  const peg$e3 = peg$literalExpectation("\r\n", false);
  const peg$e4 = peg$classExpectation(["\n", "\r"], false, false, false);
  const peg$e5 = peg$otherExpectation("trailing comment");
  const peg$e6 = peg$literalExpectation("//", false);
  const peg$e7 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e8 = peg$otherExpectation("end of line");
  const peg$e9 = peg$otherExpectation("identifier");
  const peg$e10 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e11 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false, false);
  const peg$e12 = peg$otherExpectation("identifier char");
  const peg$e13 = peg$otherExpectation("string literal");
  const peg$e14 = peg$literalExpectation("\"", false);
  const peg$e15 = peg$literalExpectation("\\", false);
  const peg$e16 = peg$classExpectation(["\"", "\\", "\n", "\r"], true, false, false);
  const peg$e17 = peg$literalExpectation("n", false);
  const peg$e18 = peg$literalExpectation("t", false);
  const peg$e19 = peg$otherExpectation("number literal");
  const peg$e20 = peg$literalExpectation("-", false);
  const peg$e21 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e22 = peg$literalExpectation(".", false);
  const peg$e23 = peg$otherExpectation("duration literal");
  const peg$e24 = peg$literalExpectation("ms", false);
  const peg$e25 = peg$literalExpectation("s", false);
  const peg$e26 = peg$otherExpectation("boolean literal");
  const peg$e27 = peg$literalExpectation("true", false);
  const peg$e28 = peg$literalExpectation("false", false);
  const peg$e29 = peg$otherExpectation("variable reference");
  const peg$e30 = peg$literalExpectation("$", false);
  const peg$e31 = peg$otherExpectation("flag check");
  const peg$e32 = peg$literalExpectation("?", false);
  const peg$e33 = peg$otherExpectation("logical OR");
  const peg$e34 = peg$literalExpectation("or", false);
  const peg$e35 = peg$otherExpectation("logical AND");
  const peg$e36 = peg$literalExpectation("and", false);
  const peg$e37 = peg$otherExpectation("comparison");
  const peg$e38 = peg$otherExpectation("comparison operator");
  const peg$e39 = peg$literalExpectation(">=", false);
  const peg$e40 = peg$literalExpectation("<=", false);
  const peg$e41 = peg$literalExpectation("!=", false);
  const peg$e42 = peg$literalExpectation("==", false);
  const peg$e43 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e44 = peg$otherExpectation("arithmetic");
  const peg$e45 = peg$otherExpectation("additive operator");
  const peg$e46 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e47 = peg$otherExpectation("term");
  const peg$e48 = peg$otherExpectation("multiplicative operator");
  const peg$e49 = peg$classExpectation(["%", "*", "/"], false, false, false);
  const peg$e50 = peg$otherExpectation("unary expression");
  const peg$e51 = peg$otherExpectation("unary operator");
  const peg$e52 = peg$classExpectation(["!", "-"], false, false, false);
  const peg$e53 = peg$otherExpectation("primary expression");
  const peg$e54 = peg$literalExpectation("(", false);
  const peg$e55 = peg$literalExpectation(")", false);
  const peg$e56 = peg$literalExpectation("author", false);
  const peg$e57 = peg$literalExpectation("version", false);
  const peg$e58 = peg$literalExpectation("title", false);
  const peg$e59 = peg$otherExpectation("metadata line");
  const peg$e60 = peg$literalExpectation("@", false);
  const peg$e61 = peg$otherExpectation("label declaration");
  const peg$e62 = peg$literalExpectation("@label", false);
  const peg$e63 = peg$otherExpectation("if/elseif line");
  const peg$e64 = peg$literalExpectation("@if", false);
  const peg$e65 = peg$literalExpectation("@elseif", false);
  const peg$e66 = peg$otherExpectation("say command");
  const peg$e67 = peg$literalExpectation("@say", false);
  const peg$e68 = peg$otherExpectation("inline dialogue (\u8BED\u6CD5\u7CD6)");
  const peg$e69 = peg$otherExpectation("say option");
  const peg$e70 = peg$literalExpectation("voice=", false);
  const peg$e71 = peg$literalExpectation("speed=", false);
  const peg$e72 = peg$literalExpectation("adv", false);
  const peg$e73 = peg$literalExpectation("nvl", false);
  const peg$e74 = peg$otherExpectation("choice block");
  const peg$e75 = peg$literalExpectation("@choice", false);
  const peg$e76 = peg$literalExpectation("@endchoice", false);
  const peg$e77 = peg$otherExpectation("choice mode");
  const peg$e78 = peg$literalExpectation("mode=", false);
  const peg$e79 = peg$otherExpectation("choice option");
  const peg$e80 = peg$literalExpectation("->", false);
  const peg$e81 = peg$literalExpectation(":", false);
  const peg$e82 = peg$literalExpectation("if", false);
  const peg$e83 = peg$otherExpectation("variable command name");
  const peg$e84 = peg$literalExpectation("set", false);
  const peg$e85 = peg$literalExpectation("add", false);
  const peg$e86 = peg$literalExpectation("sub", false);
  const peg$e87 = peg$literalExpectation("mul", false);
  const peg$e88 = peg$literalExpectation("div", false);
  const peg$e89 = peg$literalExpectation("mod", false);
  const peg$e90 = peg$literalExpectation("random", false);
  const peg$e91 = peg$otherExpectation("variable command");
  const peg$e92 = peg$otherExpectation("generic @command");
  const peg$e93 = peg$otherExpectation("command argument");
  const peg$e94 = peg$otherExpectation("key=value");
  const peg$e95 = peg$literalExpectation("=", false);
  const peg$e96 = peg$otherExpectation("positional arg");
  const peg$e97 = peg$otherExpectation("comment");
  const peg$e98 = peg$otherExpectation("blank line");

  function peg$f0(lines) {
    const seen = new Set();
    let metaDone = false;
    const commands = [];
    const metadata = {};

    for (const ln of lines) {
      if (ln.type === 'meta') {
        if (metaDone) {
          throw new Error(
            `@${ln.key} must appear before all other content`
          );
        }
        if (seen.has(ln.key)) {
          throw new Error(`Duplicate metadata: @${ln.key}`);
        }
        seen.add(ln.key);
        metadata[ln.key] = ln.value;
      } else if (ln.type === 'command') {
        metaDone = true;
        commands.push(ln.command);
      }
            // blank / comment 跳过
    }

    return { commands, metadata };
  }
  function peg$f1() {    return text();  }
  function peg$f2(chars) {    return chars.join('');  }
  function peg$f3(esc) {    return esc;  }
  function peg$f4() {    return '\n';  }
  function peg$f5() {    return '\t';  }
  function peg$f6() {    return '\\';  }
  function peg$f7() {    return '"';  }
  function peg$f8() {    return parseFloat(text());  }
  function peg$f9(value, unit) {    return { value, unit };  }
  function peg$f10() {    return true;  }
  function peg$f11() {    return false;  }
  function peg$f12(id) {    return { type: 'var', name: id };  }
  function peg$f13(id) {    return { type: 'flag', name: id };  }
  function peg$f14(head, tail) {
    return tail.reduce(
      (left, right) => ({ type: 'binary', op: 'or', left, right }),
      head,
    );
  }
  function peg$f15(head, tail) {
    return tail.reduce(
      (left, right) => ({ type: 'binary', op: 'and', left, right }),
      head,
    );
  }
  function peg$f16(left, op, right) {    return { op, right };  }
  function peg$f17(left, rhs) {
    if (!rhs) return left;
    return { type: 'binary', op: rhs.op, left, right: rhs.right };
  }
  function peg$f18(head, op, t) {    return { op, term: t };  }
  function peg$f19(head, tail) {
    return tail.reduce(
      (left, r) => ({ type: 'binary', op: r.op, left, right: r.term }),
      head,
    );
  }
  function peg$f20(head, op, u) {    return { op, term: u };  }
  function peg$f21(head, tail) {
    return tail.reduce(
      (left, r) => ({ type: 'binary', op: r.op, left, right: r.term }),
      head,
    );
  }
  function peg$f22(op, expr) {    return { type: 'unary', op, expr };  }
  function peg$f23(expr) {    return expr;  }
  function peg$f24(key, value) {    return { type: 'meta', key, value };  }
  function peg$f25(key, rest) {    return { type: 'meta', key, value: rest.trim() };  }
  function peg$f26(id) {
    return {
      type: 'command',
      command: {
        type: 'label',
        args: { name: id },
        line: location().start.line,
      },
    };
  }
  function peg$f27(expr) {
    return {
      type: 'command',
      command: {
        type: 'if',
        args: { expression: expr },
        line: location().start.line,
      },
    };
  }
  function peg$f28(expr) {
    return {
      type: 'command',
      command: {
        type: 'elseif',
        args: { expression: expr },
        line: location().start.line,
      },
    };
  }
  function peg$f29(speaker, text, options) {
    const args = { speaker, text };
    for (const opt of options) {
      Object.assign(args, opt);
    }
    return {
      type: 'command',
      command: { type: 'say', args, line: location().start.line },
    };
  }
  function peg$f30(speaker, text, options) {
    const args = { speaker, text };
    for (const opt of options) {
      Object.assign(args, opt);
    }
    return {
      type: 'command',
      command: { type: 'say', args, line: location().start.line },
    };
  }
  function peg$f31(id) {    return { voice: id };  }
  function peg$f32(num) {    return { speed: num };  }
  function peg$f33() {    return { mode: 'adv' };  }
  function peg$f34() {    return { mode: 'nvl' };  }
  function peg$f35(mode, choices) {
    return {
      type: 'command',
      command: {
        type: 'choice',
        args: {
          mode: mode ?? 'adv',
          choices,
        },
        line: location().start.line,
      },
    };
  }
  function peg$f36(m) {    return m;  }
  function peg$f37(text, label, expr) {    return expr;  }
  function peg$f38(text, label, condition) {
    const choice = { text, label };
    if (condition !== null) {
      choice.condition = condition;
    }
    return choice;
  }
  function peg$f39(name, target, values) {
    const args = { '0': target };
    values.forEach((value, index) => {
      args[String(index + 1)] = value;
    });
    return {
      type: 'command',
      command: { type: name, args, line: location().start.line },
    };
  }
  function peg$f40(name, args) {
    const argsObj = {};
    let posIndex = 0;
    for (const arg of args) {
      if (arg.type === 'kv') {
        argsObj[arg.key] = arg.value;
      } else {
        argsObj[String(posIndex++)] = arg.value;
      }
    }
    return {
      type: 'command',
      command: { type: name, args: argsObj, line: location().start.line },
    };
  }
  function peg$f41(key, value) {    return { type: 'kv', key, value };  }
  function peg$f42(value) {    return { type: 'pos', value };  }
  function peg$f43() {    return { type: 'comment' };  }
  function peg$f44() {    return { type: 'blank' };  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseScript() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLine();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseLine();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseLine() {
    let s0;

    s0 = peg$parseChoiceBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseIfLine();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSayLine();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLabelDeclaration();
          if (s0 === peg$FAILED) {
            s0 = peg$parseMetadataLine();
            if (s0 === peg$FAILED) {
              s0 = peg$parseDialogLine();
              if (s0 === peg$FAILED) {
                s0 = peg$parseVariableCommandLine();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseGenericCommandLine();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseCommentLine();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseBlankLine();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parse_() {
    let s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = input.charAt(peg$currPos);
      if (peg$r0.test(s1)) {
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    peg$silentFails--;

    return s0;
  }

  function peg$parse__() {
    let s0, s1;
